tests/ui/mismatched_types/closure-mismatch.stderr
error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:8:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:11:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/closure-mismatch.rs:11:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

